--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^13.9.0",
+    "axios": "^0.19.2",
     "tsc": "^1.20150623.0"
   },
   "devDependencies": {
